# quiver

./: .editorconfig  .gitignore  .npmrc  .prettierignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  GUI_FRAMEWORK_PLAN.md  LICENSE  Makefile  README.md  SPEC.md  WASM_BINDGEN_PLAN.md  cliff.toml  improvements.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tarpaulin.toml  turbo.json
.changeset/: config.json
.githooks/: pre-commit
.github/: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/plans/: README.md  completed-features.md  docs-and-examples.md  examples-and-docs.md  integration.md  modules.md  roadmap.md  wasm-stack-audit.md
.github/workflows/: ci.yml  docs.yml  publish-crates.yml  publish-npm.yml  release.yml
benches/: CLAUDE.md  audio_performance.rs
demos/browser/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demos/browser/src/: main.ts  quiver-wasm.d.ts
demos/browser/tests/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
demos/browser/tests/fixtures/: index.html  vite.config.ts
demos/browser/tests/tests/: api-coverage.spec.ts  edge-cases.spec.ts  engine.spec.ts  errors.spec.ts  integration.spec.ts  performance.spec.ts  subscriptions.spec.ts  worklet.spec.ts
docs/: GUI_FRAMEWORK_PLAN.md  book.toml  custom.css
docs/src/: SUMMARY.md  custom.css  introduction.md  mermaid-init.js
docs/src/appendix/: math-foundations.md  presets.md  signal-cheatsheet.md  voct-reference.md
docs/src/concepts/: analog-modeling.md  architecture.md  category-theory.md  combinators.md  latency.md  performance.md  signals.md
docs/src/getting-started/: first-patch.md  installation.md  philosophy.md  signal-flow.md
docs/src/how-to/: browser-integration.md  connect-modules.md  custom-modules.md  midi-input.md  module-catalog.md  observable-streaming.md  plugin-integration.md  serialization.md  visualization.md
docs/src/reference/: effects.md  filters.md  io-modules.md  logic-cv.md  modulators.md  oscillators.md  utilities.md
docs/src/tutorials/: envelope-shaping.md  filter-modulation.md  fm-synthesis.md  polyphony.md  sequenced-bass.md  subtractive-synthesis.md
examples/: CLAUDE.md  first_patch.rs  howto_custom_module.rs  howto_midi.rs  howto_plugin.rs  howto_serialization.rs  howto_visualization.rs  quick_taste.rs  simple_patch.rs  tutorial_envelope.rs  tutorial_filter_mod.rs  tutorial_fm.rs  tutorial_polyphony.rs  tutorial_sequenced_bass.rs  tutorial_subtractive.rs
schemas/: patch.schema.json
scripts/: generate-changelog.sh
src/: analog.rs  combinator.rs  extended_io.rs  graph.rs  introspection.rs  introspection_impls.rs  io.rs  lib.rs  mdk.rs  modules.rs  observer.rs  polyphony.rs  port.rs  presets.rs  rng.rs  serialize.rs  simd.rs  visual.rs
src/wasm/: CLAUDE.md  engine.rs  error.rs  mod.rs
