[package]
name = "quiver"
version = "0.1.0"
edition = "2021"
authors = ["Quiver Contributors"]
description = "A modular audio synthesis library using Arrow-style combinators and graph-based patching"
license = "MIT"
repository = "https://github.com/quiver-audio/quiver"
keywords = ["audio", "synthesis", "modular", "dsp", "music"]
categories = ["multimedia::audio", "game-development"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
slotmap = { version = "1.0", default-features = false, features = ["serde"] }
rand = { version = "0.8", optional = true }
libm = "0.2"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "audio_performance"
harness = false

[features]
default = ["std"]
std = ["serde/std", "serde_json", "slotmap/std", "rand"]
simd = []

[[example]]
name = "simple_patch"
path = "examples/simple_patch.rs"
